using UnityEngine;

public class AnimatorHashID
{
	public static readonly int fabricate = Animator.StringToHash("fabricate");

	public static readonly int fabricating = Animator.StringToHash("fabricating");

	public static readonly int working = Animator.StringToHash("working");

	public static readonly int open_fabricator = Animator.StringToHash("open_fabricator");

	public static readonly int open_workbench = Animator.StringToHash("open_workbench");

	public static readonly int hatch_open = Animator.StringToHash("hatch_open");

	public static readonly int reactor_on = Animator.StringToHash("reactor_on");

	public static readonly int deployed = Animator.StringToHash("deployed");

	public static readonly int open = Animator.StringToHash("open");

	public static readonly int botId = Animator.StringToHash("botId");

	public static readonly int launch = Animator.StringToHash("launch");

	public static readonly int useing = Animator.StringToHash("using");

	public static readonly int building = Animator.StringToHash("building");

	public static readonly int attacking = Animator.StringToHash("attacking");

	public static readonly int speed = Animator.StringToHash("speed");

	public static readonly int speed_x = Animator.StringToHash("speed_x");

	public static readonly int speed_y = Animator.StringToHash("speed_y");

	public static readonly int speed_z = Animator.StringToHash("speed_z");

	public static readonly int pitch = Animator.StringToHash("pitch");

	public static readonly int tilt = Animator.StringToHash("tilt");

	public static readonly int dead = Animator.StringToHash("dead");

	public static readonly int flinch = Animator.StringToHash("flinch");

	public static readonly int flinch_damage = Animator.StringToHash("flinch_damage");

	public static readonly int on_ground = Animator.StringToHash("on_ground");

	public static readonly int look_pitch = Animator.StringToHash("look_pitch");

	public static readonly int look_tilt = Animator.StringToHash("look_tilt");

	public static readonly int progress = Animator.StringToHash("progress");

	public static readonly int move_speed = Animator.StringToHash("move_speed");

	public static readonly int move_speed_x = Animator.StringToHash("move_speed_x");

	public static readonly int move_speed_y = Animator.StringToHash("move_speed_y");

	public static readonly int move_speed_z = Animator.StringToHash("move_speed_z");

	public static readonly int jump = Animator.StringToHash("jump");

	public static readonly int jump_height = Animator.StringToHash("jump_height");

	public static readonly int view_yaw = Animator.StringToHash("view_yaw");

	public static readonly int view_pitch = Animator.StringToHash("view_pitch");

	public static readonly int cyclops_yaw = Animator.StringToHash("cyclops_yaw");

	public static readonly int cyclops_pitch = Animator.StringToHash("cyclops_pitch");
}
